<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uw.stylelab.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="72sp"
        android:layout_height="72sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ischool_symbol_only_black"
        android:contentDescription="@string/logoDescription"
        style="@style/Logo"
        />

    <RelativeLayout
        android:id="@+id/thirdField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        >

        <TextView
            android:id="@+id/label1"

            android:text="@string/label1"
            style="@style/TextStyle.Label"
            />

        <TextView
            android:layout_toEndOf="@id/label1"
            android:layout_alignBaseline="@id/label1"
            android:text="@string/value1"
            style="@style/TextStyle"
            />

        <TextView
            android:id="@+id/label2"

            android:layout_below="@id/label1"

            android:text="@string/label2"
            style="@style/TextStyle.Label.Gold"
            />

        <TextView
            android:layout_toEndOf="@id/label2"
            android:layout_alignBaseline="@id/label2"
            android:text="@string/value2"
            style="@style/TextStyle"
            />

        <TextView
            android:id="@+id/label3"
            android:layout_below="@id/label2"

            android:text="@string/label3"
            style="@style/TextStyle.Label"
            />

        <TextView
            android:layout_toEndOf="@id/label3"
            android:layout_alignBaseline="@id/label3"
            android:text="@string/value3"
            style="@style/TextStyle"
            />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonLabel"
        style="@style/ButtonStyle"
        />

</RelativeLayout>
